tests/ui/repr/invalid_repr_1.stderr
error[E0552]: unrecognized representation hint
 --> tests/ui/repr/invalid_repr_1.rs:4:8
  |
4 | #[repr(invalid)]
  |        ^^^^^^^
  |
  = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
